# flamingo

./: .gitignore  .travis.yml  README.md  README_en.md  Ubuntu安装mysql.txt  bug列表及待完成的任务.txt  使用前，请阅读.txt  更新日志.txt  聊天消息格式.txt
flamingoclient/: Build.bat  CMakeLists.txt  Flamingo.sln  FlamingoClient.sln  JunkClear.bat  bug列表.txt  开发日志.txt
flamingoclient/CatchScreen/: CMakeLists.txt  CatchScreen.cpp  CatchScreen.h  CatchScreen.rc  CatchScreen.vcxproj  CatchScreen.vcxproj.filters  CatchScreenDlg.cpp  CatchScreenDlg.h  EditEx.cpp  EditEx.h  StdAfx.cpp  StdAfx.h  TrackerEx.cpp  TrackerEx.h  resource.h
flamingoclient/CatchScreen/debug/: CatchScreen.res
flamingoclient/CatchScreen/res/: CatchScreen.rc2  arrow_m.cur  move_r.cur
flamingoclient/Source/: AboutDlg.cpp  AboutDlg.h  AddFriendConfirmDlg.cpp  AddFriendConfirmDlg.h  BuddyChatDlg.cpp  BuddyChatDlg.h  BuddyInfoDlg.cpp  BuddyInfoDlg.h  BuddyInfoFloatWnd.cpp  BuddyInfoFloatWnd.h  BuddyListCtrl.cpp  BuddyListCtrl.h  BuddyListCtrlEx.cpp  Buffer.cpp  Buffer.h  CRegisterSkinHyperLink.cpp  CRegisterSkinHyperLink.h  CascadeWinManager.cpp  CascadeWinManager.h  ChangePicHead.cpp  ChangePicHead.h  ChangePicHeadDlg.cpp  ChangePicHeadDlg.h  ChatDlgCommon.cpp  ChatDlgCommon.h  ChatTabMgr.cpp  ChatTabMgr.h  CheckNetworkStatusTask.cpp  CheckNetworkStatusTask.h  ClosePromptDlg.cpp  ClosePromptDlg.h  Crash.cpp  CreateNewGroupDlg.cpp  CreateNewGroupDlg.h  CriticalSection.cpp  CriticalSection.h  CustomMsgDef.h  DstVersion.h  EncodeUtil.cpp  EncodeUtil.h  (+156 more)
flamingoclient/Source/RemoteDesktop/: CursorInfo.h  ScreenManager.cpp  ScreenManager.h  ScreenSpy.cpp  ScreenSpy.h  until.cpp  until.h
flamingoclient/Source/SQLite 3.7.17/: sqlite3.h
flamingoclient/Source/SkinLib/: CMakeLists.txt  SkinButton.cpp  SkinButton.h  SkinComboBox.cpp  SkinComboBox.h  SkinDialog.cpp  SkinDialog.h  SkinEdit.cpp  SkinEdit.h  SkinHyperLink.cpp  SkinHyperLink.h  SkinLib.h  SkinListCtrl.cpp  (+21 more)
flamingoclient/iAutoUpdate/: CMakeLists.txt  iUpdateAuto.cpp  iUpdateAuto.rc  iUpdateAuto.vcxproj  iUpdateAuto.vcxproj.filters  resource.h  unzip.cpp  unzip.h  wlconfig.h  zwldef.h
flamingoserver/: CMakeLists.txt  CentOS7关闭防火墙方法.txt  FlamingoServer.sln  FlamingoServer.vcxproj  FlamingoServer.vcxproj.filters  Ubuntu安装mysql.txt  Ubutun安装mysql.txt  chatserver.conf  fileserver.conf  imgserver.conf  mychatserver.conf  myimgserver.conf  myserver.sln  myserver.vcxproj  myserver.vcxproj.filters  mysql信息.txt  mysql修改root密码.txt  rename_database.shell  table.sql  服务器端更新日志.txt
flamingoserver/base/: AsyncLog.cpp  AsyncLog.h  AsyncLogging.cpp  AsyncLogging.h  ConfigFileReader.cpp  ConfigFileReader.h  CountDownLatch.cpp  CountDownLatch.h  FileUtil.cpp  FileUtil.h  LogFile.cpp  LogStream.cpp  LogStream.h  Logging.cpp  Logging.h  Platform.cpp  Platform.h  RAIIWrapper.h  Singleton.h  Timestamp.cpp  Timestamp.h  asynclogging.cpp  asynclogging.h  configfilereader.cpp  countdownlatch.cpp  countdownlatch.h  fileutil.cpp  fileutil.h  logfile.cpp  logfile.h  logging.cpp  logging.h  logstream.cpp  logstream.h  singleton.h  timestamp.cpp
flamingoserver/chatserver/: chatserver.vcxproj  chatserver.vcxproj.filters
flamingoserver/chatserversrc/: BussinessLogic.cpp  BussinessLogic.h  ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  ClientSession.cpp  ClientSession.h  HttpMsg.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  IMServer.cpp  IMServer.h  MonitorServer.cpp  MonitorServer.h  MonitorSession.cpp  MonitorSession.h  Msg.h  MsgCacheManager.cpp  MsgCacheManager.h  TcpSession.cpp  TcpSession.h  UserManager.cpp  UserManager.h  main.cpp
flamingoserver/common/: ngx_md5.cpp  ngx_md5.h
flamingoserver/database/: DatabaseMysql.cpp  Field.h  QueryResult.cpp  QueryResult.h  databasemysql.cpp  databasemysql.h  field.cpp  field.h  queryresult.cpp  queryresult.h
flamingoserver/etc/: chatserver.conf  fileserver.conf
flamingoserver/fileserver/: fileserver.vcxproj  fileserver.vcxproj.filters
flamingoserver/fileserversrc/: FileManager.cpp  FileManager.h  FileMsg.h  FileServer.cpp  FileServer.h  FileSession.cpp  FileSession.h  MD5.cpp  MD5.h  TcpSession.cpp  TcpSession.h  main.cpp
flamingoserver/imgserver/: imgserver.vcxproj  imgserver.vcxproj.filters
flamingoserver/imgserversrc/: main.cpp
flamingoserver/jsoncpp-0.5.0/: json_reader.cpp  json_value.cpp  json_writer.cpp  value.h
flamingoserver/jsoncpp1.9.0/: json_reader.cpp  json_value.cpp  json_writer.cpp  value.h  version.h
flamingoserver/mysql/: MysqlManager.cpp  MysqlManager.h  MysqlThrd.cpp  MysqlThrd.h  MysqlThrdMgr.cpp  TaskList.cpp  TaskList.h  mysqlmanager.cpp  mysqlmanager.h  mysqlthrd.cpp  mysqlthrd.h  mysqlthrdmgr.cpp  mysqlthrdmgr.h  table.sql  tasklist.cpp  tasklist.h
flamingoserver/mysqlapi/: DatabaseMysql.cpp  DatabaseMysql.h  Field.cpp  Field.h  QueryResult.cpp  QueryResult.h
flamingoserver/mysqlmgr/: MysqlManager.cpp  MysqlManager.h  MysqlTask.h  MysqlThrd.cpp  MysqlThrd.h  MysqlThrdMgr.cpp  MysqlThrdMgr.h  TaskList.cpp  TaskList.h
flamingoserver/net/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  ByteBuffer.cpp  ByteBuffer.h  Callbacks.h  Channel.cpp  Channel.h  Connector.cpp  Connector.h  Endian.h  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddress.cpp  InetAddress.h  PollPoller.cpp  PollPoller.h  Poller.cpp  Poller.h  ProtocolStream.cpp  ProtocolStream.h  SelectPoller.cpp  SelectPoller.h  Sockets.cpp  Sockets.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Timer.cpp  Timer.h  (+32 more)
flamingoserver/utils/: Base64Util.cpp  Base64Util.h  DaemonRun.cpp  DaemonRun.h  MD5.cpp  MD5.h  StringUtil.cpp  StringUtil.h  URLEncodeUtil.cpp  URLEncodeUtil.h  UUIDGenerator.cpp  UUIDGenerator.h
flamingoserver/windowsproj/: chatserver.vcxproj  chatserver.vcxproj.filters  fileserver.vcxproj  fileserver.vcxproj.filters  imgserver.vcxproj  imgserver.vcxproj.filters
flamingoserver/zlib1.2.11/: ZlibUtil.cpp  ZlibUtil.h  gzguts.h  gzlib.c  zlibdemo.c  文件概览.txt
(+328 files in other folders)
