cmake_minimum_required(VERSION 3.0)
project(SkinLib)
include_directories(.)
link_libraries(imm32.lib)
SET(SKIN_LIB_SOURCE_FILE 
./SkinButton.h 
./SkinButton.cpp
./SkinComboBox.h
./SkinComboBox.cpp
./SkinDialog.h
./SkinDialog.cpp
./SkinEdit.h
./SkinEdit.cpp
./SkinHyperLink.h
./SkinHyperLink.cpp
./SkinLib.h
./SkinListCtrl.h
./SkinListCtrl.cpp
./SkinManager.h
./SkinManager.cpp
./SkinMenu.h
./SkinMenu.cpp
./SkinMessageBox.h
./SkinMessageBox.cpp
./SkinPictureBox.h
./SkinPictureBox.cpp
./SkinRichEdit.h
./SkinRichEdit.cpp
./SkinScrollBar.h
./SkinScrollBar.cpp
./SkinStatic.h
./SkinStatic.cpp
./SkinTabCtrl.h
./SkinTabCtrl.cpp
./SkinToolBar.h
./SkinToolBar.cpp
./SkinWebBrowser.h
./SkinWebBrowser.cpp)
add_library(SkinLib ${SKIN_LIB_SOURCE_FILE})